--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -27,6 +27,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.4",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "react": "^18.2.0",
