--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
     "mongoose": "^7.0.4",
+    "mongoose-unique-validator": "^4.0.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
