--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -28,13 +28,16 @@
     "@emotion/styled": "^11.10.6",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
+    "bootstrap": "^5.3.0-alpha3",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
+    "reactstrap": "^9.1.9",
     "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "style-loader": "^3.3.1"
   }
 }
